# pytracy

./: .gitignore  LICENSE  README.md  b.py  build.sh  f.py  performance.md  pyTracy.c  pyproject.toml  pytracy github  pytracy.sln  pytracy.vcxproj  setup.cfg  setup.py  test.py  testPerf.py  testThreading.py  test_flags.py
.github/workflows/: python-publish.yml
data/: gretl.gdt  gretl2.gdt  results6.csv  results7.csv
extra/pytracy/: __init__.pyi
scripts/: build_tracy_ubuntu.sh
src/: pyTracy.cpp  pytracy.pyi  utility.h
tests/: mark_function.py  np.py  run_test.py  test.py  test_control_flow.py  test_library_integrations.py  test_mark_function.py  test_threads.py  threads.py
tracy-build/: CMakeCache.txt  INSTALL.vcxproj  Tracy.sln  TracyClient.vcxproj  ZERO_CHECK.vcxproj  cmake_install.cmake
utils/: perf.py  testPerf.py  test_flags_perf.py  verify.py
