[project]
name = "pytracy"
version = "0.0.2rc4"
authors = [
  { name="Jakub Berkop", email="jakub.berkop@gmail.com" },
]
readme = "README.md"
description = "python package for tracing the performance of python code"
requires-python = ">=3.11.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
requires-python = ">=3.9.0"

[tool.setuptools]
license-files = ["LICENSE.txt", "extra/THIRD_PARTY_LICENSES.txt"]

[tool.setuptools.packages.find]
where = ["extra"]

[tool.setuptools.package-data]
"*" = ["py.typed", "__init__.pyi"]

[tool.cibuildwheel]
skip = ["pp*", "*aarch64", "*ppc64le", "*s390x"]